z-index fix

--- a/_assets/stylesheets/_partials/_header/_top_bar.scss
+++ b/_assets/stylesheets/_partials/_header/_top_bar.scss
@@ -6,6 +6,10 @@
 	CSS for the top bar
 
 ==================================*/
+.main-site-header {
+	position: relative;
+	z-index: 3000;
+}
 
 .top-bar {
 	@include clearfix;
