--- a/assets/dev/css/global.css
+++ b/assets/dev/css/global.css
@@ -652,6 +652,11 @@ a {
 	CSS for the top bar
 
 ==================================*/
+.main-site-header {
+  position: relative;
+  z-index: 3000;
+}
+
 .top-bar {
   padding: 16px 0px;
   padding: 1rem 0rem;
